syntax = "proto3";

option go_package = "github.com/nbvghost/dandelion/service/serviceobject";

package serviceobject;

//import "google/protobuf/any.proto";

service Server {
  rpc Call (GrpcRequest) returns (GrpcResponse) {}
}

message GrpcRequest {
  string AppName = 1;
  string Route = 2;
  string HttpMethod = 3;
  uint64 Timeout = 4;
  string Header = 5;
  string Query = 6;
  repeated Param Uri = 7;
  string Form = 8;
  bytes Body = 9;
  string UID = 10;
  bool IsApi = 11;
}

message GrpcResponse {
  int64  Code = 1;
  bytes Data = 2;
  string Name = 3;
}

message Param  {
  string Key = 1;
  string Value = 2;
}